# doctorFolio-narrative-engine

./: .gitignore  AGENTS.md  Makefile  README.md  REVIEW-1.md  REVIEW-2.md  pyproject.toml
docs/: gold-redesign-codex-prompt-2.md  gold-redesign-codex-prompt.md  m2.1-extraction-bakeoff.md  nvda-spike-report.md  opus-valuation-routing-review-prompt.md  opus-valuation-routing-review-response.md
scripts/: auto-loop-mcp.json  auto-loop-prompt.md  auto-loop.sh  calibrate_type1_tension.py  codex-auto-loop-prompt.md  codex-review-schema.json  codex_review_result.py  com.doctorfolio.autoloop-pr-approval.plist  dispatch-codex-task.sh  learning-policy.md  pr-approval-poller.sh  record-auto-loop-lesson.sh  run-codex-task.sh  validate_nvda_cycle.py
tests/: conftest.py  test_auto_loop_runner.py  test_bootstrap.py  test_bridge.py  test_capital_structure.py  test_claim.py  test_distress_bridge.py  test_distributions.py  test_extraction_benchmark.py  test_extraction_calibration.py  test_factor.py  test_factor_signflow.py  test_ingestion_chunker.py  test_ingestion_fetcher.py  test_ingestion_pipeline.py  test_ingestion_store.py  test_lifecycle.py  test_loading_equivalence.py  test_m2_end_to_end.py  test_mature_case.py  test_monte_carlo.py  test_narrative.py  test_narrative_axes.py  test_narrative_axes_calibration.py  test_narrative_axis_calibration.py  test_narrative_calibration.py  test_narrative_comparison.py  test_narrative_explanation.py  test_narrative_fact_coreference.py  test_narrative_type2.py  test_nvda_spike.py  test_pr_approval_poller.py  test_projection.py  (+4 more)
(+61 files in other folders)
